--- a/css/estilo.css
+++ b/css/estilo.css
@@ -46,6 +46,10 @@ div.invert-text {
   text-align: right;
 }
 
+div.middletext {
+  text-align: center;
+}
+
 @media screen and (max-width: 991px) {
   .center {
     text-align: center; }
