--- a/css/estilo.css
+++ b/css/estilo.css
@@ -50,6 +50,15 @@ div.middletext {
   text-align: center;
 }
 
+div.middletext span {
+  display: inline-block;
+  height: 195px;
+}
+
+span.icontwo {
+  padding-top:64px;
+}
+
 @media screen and (max-width: 991px) {
   .center {
     text-align: center; }
