--- a/css/estilo.css
+++ b/css/estilo.css
@@ -59,6 +59,49 @@ span.icontwo {
   padding-top:64px;
 }
 
+span.topicons {
+  margin: 30px 0;
+}
+
+span.middleicons img {
+  display: inline-block;
+}
+
+p.mini-text {
+  margin-left: 15px;
+  display: inline-block;
+  max-width: 250px;
+  font-size: 12px;
+  color: #7c7c7c;
+}
+
+p.mini-text a {
+  display: inline-block;
+  font-size: 13px;
+  margin-top: 10px;
+}
+
+div.readmore {
+  background-color: #ffffff;
+  padding: 0;
+}
+
+div.lightblue {
+  background-color: #f0f5f9;
+  padding: 70px 0;
+  margin-top:60px;
+}
+
+div.lightgray {
+  background-color: #f8f8f4;
+  padding-bottom: 60px;
+  padding-top: 50px;
+}
+
+div.threeicons {
+  margin-top: 50px;
+}
+
 @media screen and (max-width: 991px) {
   .center {
     text-align: center; }
