--- a/css/estilo.css
+++ b/css/estilo.css
@@ -103,7 +103,7 @@ p.mini-text a {
   margin-top: 10px;
 }
 
-div.readmore {
+div.readmore table {
   background-color: #ffffff;
   padding: 0;
 }
@@ -126,6 +126,10 @@ div.threeicons {
 
 tr {
   border-bottom: 1px solid #000000;
+}
+
+tr.noborder {
+  border-bottom: 0;
 }
 
 td a {
@@ -176,6 +180,36 @@ div.text-start {
   margin-top: 75px;
 }
 
+div.social {
+  margin-top: 30px;
+}
+
+div.social img {
+  margin: 5px;
+}
+
+div.anchor {
+  text-align: center;
+  margin: 80px 0;
+  margin-bottom: 70px;
+}
+
+div.finalbottom a {
+  color: #ffffff;
+  padding: 15px;
+  background-color: #5085fa;
+}
+
+footer {
+  height: 84px;
+  background-color: #000000;
+}
+
+div.finalbottom {
+  margin-top: 50px;
+  margin-bottom: 60px;
+}
+
 @media screen and (max-width: 991px) {
   .center {
     text-align: center; }
@@ -196,5 +230,14 @@ div.text-start {
   }
   div.photo-product {
     margin-bottom: 60px;
+  }
+  div.read2 {
+    margin-top: 50px;
+  }
+  div.finalbottom {
+    text-align: center;
+  }
+  div.bluebottom {
+    margin-top: 50px;
   }
 }
